Fixed invalid border-radius value for lex-web-ui-iframe.css which resulted in a visible border when the iFrame was minimized

--- a/src/lex-web-ui-loader/css/lex-web-ui-iframe.css
+++ b/src/lex-web-ui-loader/css/lex-web-ui-iframe.css
@@ -32,7 +32,7 @@
 /* disable box shadow when minimized */
 .lex-web-ui-iframe.lex-web-ui-iframe--minimize iframe {
   box-shadow: none;
-  border-radius: none;
+  border-radius: 0px;
 }
 
 /* hide on very small resolutions */
